# RAG-and-Agentic-AI

./: main.py  pyproject.toml
01-basics/: 01_chat_model.py  02_chat_messages.py
04-documents/: 01_document_object.py  02_document_loaders.py  README.md
05-text-splitters/: 01-character_text_splitter.py
05-text-splitters/Exercise/: document_loader_&_text_splitters.py
06-embedding-models/: 01_embeddings.py
07-vector-stores/: 01_vector_store.py
08-retrievers/: 03_retrieval_QA.py  parent_document_retrievers.py  retriever.py
08-retrievers/chroma_db/: chroma.sqlite3
chroma_db/: chroma.sqlite3
